MNK-4135 : merge 37427 from tc-3.6
svn path=/projects/container-test-framework/trunk/; revision=37430